# compiler-llvm-context

./: .gitignore  Cargo.toml  README.md
src/: const.rs  dump_flag.rs  hashes.rs  lib.rs
src/context/: address_space.rs  argument.rs  attribute.rs  build.rs  code_type.rs  evm_data.rs  mod.rs  optimizer.rs
src/context/function/: constructor.rs  deploy_code.rs  entry.rs  evm_data.rs  intrinsic.rs  mod.rs  return.rs  runtime.rs  runtime_code.rs  selector.rs
src/context/function/block/: evm_data.rs  key.rs  mod.rs
src/context/optimizer/: mod.rs  settings.rs
src/context/optimizer/settings/: mod.rs  size_level.rs
src/evm/: arithmetic.rs  bitwise.rs  calldata.rs  comparison.rs  context.rs  contract.rs  create.rs  ether_gas.rs  event.rs  ext_code.rs  hash.rs  immutable.rs  math.rs  memory.rs  mod.rs  return.rs  return_data.rs  storage.rs  verbatim.rs
src/evm/contract/: mod.rs  request.rs  simulation.rs
src/utils/: bitwise.rs  calldata.rs  comparison.rs  contract.rs  create.rs  hash.rs  memory.rs  mod.rs  return.rs  storage.rs
