[package]
name = "compiler-llvm-context"
version = "1.1.0"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
license = "Apache-2.0"
edition = "2021"
description = "The zkEVM Solidity compiler"

[dependencies]
anyhow = "1.0"
semver = "1.0"
itertools = "0.10"
regex = "1.5"
num = "0.4"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
md5 = "0.7"

zkevm-assembly = { git = "ssh://git@github.com/matter-labs/zkEVM-assembly", branch = "v1.1.1" }

compiler-common = { git = "ssh://git@github.com/matter-labs/compiler-common", branch = "az/vm-v1.1" }

#compiler-common = { path = "../compiler-common" }

[dependencies.inkwell]
git = "ssh://git@github.com/matter-labs-forks/inkwell"
default-features = false
features = ["llvm13-0", "target-syncvm"]
